# AutoSSh

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml
docs/: book.toml  index.html  script.js  sidebar.html  style.css
docs/pages/: architecture.html  changelog.html  config.html  contributing.html  faq.html  install.html  quickstart.html  security.html  troubleshooting.html  usage.html
src/: autostart.rs  config.rs  main.rs  monitor.rs  ssh.rs  tray.rs
