[package]
name = "auto-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["net", "time", "rt", "macros"] }
